# ai-deep-research-assistant

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
core/: research_manager.py
docs/: architecture.md  setup.md
research_agents/: email_agent.py
