[project]
name = "ai-deep-research-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.112.2",
    "gradio==4.44.1",
    "huggingface-hub<1.0",
    "jinja2==3.1.4",
    "openai>=2.37.0",
    "openai-agents>=0.13.6",
    "python-dotenv>=1.2.2",
    "sendgrid>=6.12.5",
    "starlette==0.38.6",
]
